--- a/Codeforces/UserDetailModule/View/UserDetailView.xib
+++ b/Codeforces/UserDetailModule/View/UserDetailView.xib
@@ -11,7 +11,6 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserDetailViewController" customModule="Code_Forces" customModuleProvider="target">
             <connections>
-                <outlet property="containerView" destination="kud-Qs-DX0" id="UQG-fa-7lr"/>
                 <outlet property="userDetailTableView" destination="B9o-pY-QKL" id="NRX-bF-2UY"/>
                 <outlet property="view" destination="iN0-l3-epB" id="87K-iW-VUy"/>
             </connections>
@@ -21,48 +20,22 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kud-Qs-DX0" userLabel="Content view">
-                    <rect key="frame" x="0.0" y="324.5" width="414" height="537.5"/>
-                    <subviews>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="B9o-pY-QKL">
-                            <rect key="frame" x="0.0" y="20" width="414" height="517.5"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <connections>
-                                <outlet property="dataSource" destination="-1" id="Ns0-tR-Lgh"/>
-                                <outlet property="delegate" destination="-1" id="Ju7-HZ-IxG"/>
-                            </connections>
-                        </tableView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gtd-WI-P0e">
-                            <rect key="frame" x="184.5" y="8" width="45" height="4"/>
-                            <color key="backgroundColor" name="Pin"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="45" id="0md-Ip-i6a"/>
-                                <constraint firstAttribute="height" constant="4" id="JRZ-nc-qJA"/>
-                            </constraints>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                    <real key="value" value="2"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </view>
-                    </subviews>
-                    <color key="backgroundColor" name="AppTheme"/>
-                    <constraints>
-                        <constraint firstAttribute="bottom" secondItem="B9o-pY-QKL" secondAttribute="bottom" id="EHp-dv-df6"/>
-                        <constraint firstItem="gtd-WI-P0e" firstAttribute="top" secondItem="kud-Qs-DX0" secondAttribute="top" constant="8" id="MMY-yO-eHj"/>
-                        <constraint firstItem="gtd-WI-P0e" firstAttribute="centerX" secondItem="kud-Qs-DX0" secondAttribute="centerX" id="XyO-9G-dpD"/>
-                        <constraint firstAttribute="trailing" secondItem="B9o-pY-QKL" secondAttribute="trailing" id="ngC-l5-tHl"/>
-                        <constraint firstItem="B9o-pY-QKL" firstAttribute="top" secondItem="kud-Qs-DX0" secondAttribute="top" constant="20" symbolic="YES" id="sPu-aw-clt"/>
-                        <constraint firstItem="B9o-pY-QKL" firstAttribute="leading" secondItem="kud-Qs-DX0" secondAttribute="leading" id="tDK-R2-O65"/>
-                    </constraints>
-                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="B9o-pY-QKL">
+                    <rect key="frame" x="0.0" y="48" width="414" height="814"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Ns0-tR-Lgh"/>
+                        <outlet property="delegate" destination="-1" id="Ju7-HZ-IxG"/>
+                    </connections>
+                </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" name="AppTheme"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="kud-Qs-DX0" secondAttribute="bottom" id="lhC-tk-Om6"/>
-                <constraint firstItem="kud-Qs-DX0" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="1.2:2" id="mjx-vj-an0"/>
-                <constraint firstItem="kud-Qs-DX0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="uBJ-hD-37K"/>
-                <constraint firstAttribute="trailing" secondItem="kud-Qs-DX0" secondAttribute="trailing" id="uGi-nq-3rV"/>
+                <constraint firstItem="B9o-pY-QKL" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="MHQ-9Z-5LE"/>
+                <constraint firstItem="B9o-pY-QKL" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="g4u-Mn-N9M"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="B9o-pY-QKL" secondAttribute="bottom" id="k7N-zN-8ED"/>
+                <constraint firstItem="B9o-pY-QKL" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="zWJ-vw-9vy"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="140.625"/>
         </view>
@@ -70,9 +43,6 @@
     <resources>
         <namedColor name="AppTheme">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="Pin">
-            <color red="0.52156862745098043" green="0.52156862745098043" blue="0.58431372549019611" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
